--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         - containerPort: 5000
         env:
         - name: DB_HOST
-          value: "my-rds-instance.ce9wya4k41zv.us-east-1.rds.amazonaws.com"
+          value: "my-rds-instance.c1gsc8ococm9.us-east-2.rds.amazonaws.com"
         - name: DB_USER
           value: "vijay"
         - name: DB_PASSWORD
